codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
assertion_line: 270
expression: sanitized
---
/status

╭────────────────────────────────────────────╮
│  >_ OpenAI Codex (vX.Y.Z)                 │
│                                            │
│ Visit chatgpt.com/codex/settings/usage for │
│ up-to-date                                 │
│ information on rate limits and credits     │
│                                            │
│  Model:            gpt-5-codex (reasoning  │
│  Directory: [[workspace]]                  │
│  Approval:         on-request              │
│  Sandbox:          read-only               │
│  Agents.md:        <none>                  │
│                                            │
│  Token usage:      1.9K total  (1K input + │
│  Context window:   100% left (2.1K used /  │
│  5h limit:         [███████████████░░░░░]  │
│                    (resets 03:14)          │
╰────────────────────────────────────────────╯
